Cep rules added